fix: align ProfilePopup & AlertPopup with Figma, fix merry-match date filter and fix button behavior to respect limits and improve styling.

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -185,6 +185,11 @@
   color: #646d89;
   font-size: 24px;
 }
+.gray-icon-btn.inactive svg {
+  color: #c70039;
+  font-size: 24px;
+}
+
 
 .gray-icon-btn .tooltip {
   position: absolute;
